# hdspfw

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
fw/: Cargo.toml
fw/src/: disp.rs  main.rs  main_blinky.rs  main_old.rs  test_throughput.rs  uart.rs  usb.rs
hdsplib/: Cargo.toml
hdsplib/src/: cast.rs  circ_buff.rs  lib.rs  packet.rs  random.rs  utils.rs
